fixed weedwacker crash